--- a/style.css
+++ b/style.css
@@ -14,5 +14,7 @@ img {
 }
 
 h1 {
-  color: rgb(255, 125, 73);
+  color: rgb(255, 255, 255);
+  text-transform: uppercase;
+  text-shadow: 2px 1px 6px #3e3e3e;
 }
