--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ img {
   margin: 0 auto;
   text-align: center;
   background-color: rgb(213, 212, 212);
-  border: 6px solid rgb(236, 236, 236);
+  border: 12px solid rgb(134, 151, 158);
   border-radius: 10px;
   padding: 10px 0;
 }
@@ -17,4 +17,7 @@ h1 {
   color: rgb(255, 255, 255);
   text-transform: uppercase;
   text-shadow: 2px 1px 6px #3e3e3e;
+}
+h2 {
+  color: rgb(104, 117, 125);
 }
